Configure production deployment: Dockerfiles, Render blueprint, Vercel config, profiles, and DEPLOYMENT.md